compiling_error.txt
In file included from /Users/tangtonghui/WordSimilarity/similarity.cpp:8:
/Users/tangtonghui/WordSimilarity/similarity.h:101:1: error: version control conflict marker in file
<<<<<<< HEAD
^
1 error generated.
